--- a/public/css/display.css
+++ b/public/css/display.css
@@ -429,6 +429,19 @@ h3 {
   color: #000;
 }
 
+.ranking-table {
+  font-size: 42px;
+  font-weight: 800;
+  min-width: 80px;
+  color: #fff;
+  background-color: #007bff;
+  border-radius: 12px;
+  padding: 8px 15px;
+  text-align: center;
+  margin-right: 20px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+}
+
 .ranking-name {
   font-size: 48px;
   font-weight: 700;
